login dark mode issue resolved

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,7 +1,7 @@
 .loginPageContainer {
     width: 100%;
     height: 100vh;
-    background-color: var(--primary-white);
+    background-color: var(--landing-background);
     position: relative;
     overflow: hidden;
     display: flex;
